fix img not showing

--- a/styles/basic/base.css
+++ b/styles/basic/base.css
@@ -52,6 +52,7 @@ button, i {
 
 i {
     font-size: 1.2em;
+    color: #000000;
 }
 
 .arrow {
